elements/style.css
@font-face {
	font-family: roboto;
	src: url(roboto.ttf);
	font-weight: normal;
}

@font-face {
	font-family: mohave;
	src: url(mohave.ttf);
	font-weight: normal;
}

:root {
	--watch_list: block;
}

html {
	height: 100%;
}

body {
	font-size: 14px;
	color: #CCCCCC;
	font-family: roboto;
	background-color: #030303;
	display: flex;
	flex-direction: column;
	justify-content: center;
	margin: 0;
	min-height: 100%;
	user-select: none;
}

main, .aside_content {
	width: 1120px;
	margin: 0 auto;
}

h1 {
	font-family: mohave;
	font-size: 20px;
	margin: 0;
	font-weight: normal;
}

.center {
	text-align: center;
}

a:link, a:visited, a:link:active, a:visited:active {
	color: inherit;
	text-decoration: none;
}
  
a:hover {
	text-decoration: underline;
}

button, input {
	appearance: none;
	background-color: transparent;
	border: none;
	outline: none;
	cursor: pointer;
	color: inherit;
}

button:focus, input:focus {
	outline: none;
}

input[type="date"]::-webkit-calendar-picker-indicator {
	display: none;
}

/* .sidebar_active main, info {
	display: none;
} */

/* .sidebar_active info {
	display: block;
} */

@media (max-width: 1240px) { main, .aside_content { width: 896px; } }
@media (max-width: 906px) { main, .aside_content { width: 672px; } }
@media (max-width: 682px) { main, .aside_content { width: 448px; } }
@media (max-width: 458px) { main, .aside_content { width: 288px/*224px*/; } }

/* @media (max-width: 1240px) { .sidebar_active main { width: 896px; } }
@media (max-width: 906px) { .sidebar_active main { width: 672px; } }
@media (max-width: 682px) { .sidebar_active main { width: 448px; } }
@media (max-width: 458px) { .sidebar_active main { width: 224px; } } */

footer {
	margin-top: auto;
	height: 60px;
	padding-right: 15%;
	padding-left: 15%;
	padding-top: 15px;
	text-align: center;
	border-top: #CCCCCC solid 1px;
}

footer img {
	height: 14px;
	width: 14px;
}

.footer_flex {
	display: flex;
	justify-content: space-between;
}

.footer_links {
	display: flex;
}

.footer_links a:not(:last-child) {
	margin-right: 40px;
}

@media (max-width: 530px) {
	footer {
		height: 100px;
		padding: 0;
		padding-top: 15px;
	}
	.footer_flex {
		flex-direction: column-reverse;
	}
	.footer_links {
		justify-content: center;
	}
}

/* ####################################################################### */
/* img play box */
.img_play_box img {
	transition: opacity 0.2s;
}

.control_button {
	display: none;
	position: absolute;
	background-color: rgba(0, 0, 0, 0.5);
	backdrop-filter: blur(10px);
	border-radius: 100%;
	transition: transform 0.2s;
	width: 40px;
	height: 40px;
	padding: 10px;
}

.control_button:hover {
	background-color: rgba(0, 0, 0, 0.6);
	transform: scale(1.2);
}

.img_play_box:hover img {
	opacity: 60%;
}

.img_play_box:hover .control_button {
	display: block;
}

@media (pointer: coarse) {
	ol div .play,
	ol div .info,
	ol div:not(.in_watch_list) .add,
	ol div.in_watch_list .remove {
		display: block;
	}
}


/* ####################################################################### */
/* Episode list */
ol {
	padding: 0;
	display: flex;
	/* justify-content: center; */
	/* flex-flow: row-reverse wrap-reverse; */
	flex-flow: row wrap;
}

ol div {
	display: var(--watch_list);
	margin: 12px;
	margin-bottom: 15px;
	position: relative;
	cursor: pointer;
}

ol img {
	width: 200px;
	border-radius: 5px;
}

ol a {
	display: block;
}

ol p {
	margin: 8px 0;
	width: 200px;
}

ol span {
	font-weight: bold;
}

.add, .remove {
	top: 145px;
	left: 5px;
}

.info {
	top: 90px;
	left: 5px;
}

.play {
	top: 125px;
	right: 15px;
	width: 60px;
	height: 60px;
	padding-left: 18px;
	padding-top: 12px;
}

ol div:hover .play,
ol div:hover .info,
ol div:not(.in_watch_list):hover .add,
ol div.in_watch_list:hover .remove {
	display: block;
}

.not_found {
	display:none;
	text-align: center;
}

/* ####################################################################### */
/* Aside */
aside {
	position: sticky;
	z-index: 1;
	right: 0;
	top: 60px;
	height: 0;
	overflow: hidden;
	/* height: calc(100vh - 100px);
	max-height: 700px; */
	border-bottom: #CCCCCC solid 1px;
	background-color: rgba(0, 0, 0, 0.8);
	backdrop-filter: blur(20px);
	transition: height 0.5s;
}

.aside_content {
	display: none;
	position: relative;
	height: calc(100% - 80px);
	padding: 40px 0;
	overflow: hidden;
}

.hide_aside {
	position: absolute;
	color: inherit;
	background-color: #030303;
	border: #CCCCCC solid 1px;
	border-radius: 5px;
	bottom: 0;
	left: 50%;
	transform: translate(-50%, 50%);
	width: 300px;
	height: 30px;
}

.hide_aside:hover {
	background-color: #333333;
}

/* Info Box */
aside .img_play_box img {
	border-radius: 5px;
	width: 264px;
	margin-right: 50px;
	margin-left: 12px;
}

aside .play {
	top: 142px;
	right: unset;
	left: 102px;
}


.info_description {
	height: 270px;
	user-select: text;
	margin-right: 12px;
}

.info_description div {
	display: flex;
	justify-content: space-between;
}

.info_description p {
	height: 220px;
	overflow-y: auto;
}

.info_description header {
	font-size: small;
	/* margin-top: 2px; */
}

.info_description svg {
	width: 15px;
	height: 15px;
	fill:#CCCCCC;
	fill-opacity: 1;
}

.info_description input {
	cursor: initial;
	width: 70px;
}

.info_description svg:hover {
	fill: #333333;
}

/* Settings */
.settings_box {
	display: flex;
	margin-top: 30px;
}

.settings_box > div {
	padding: 0 10px;
	width: calc(50% - 20px);
}

.provider_list {
	display: flex;
	justify-content: center;
}

.provider_sel {
	height: 60px;
	cursor: pointer;
}

.provider_sel img {
	height: 35px;
	padding: 12.5px;
}

.provider_sel span {
	display: inline-block;
	overflow: hidden;
	padding-bottom: 21.5px;
	width: 100px;
	white-space: nowrap;
	transition: width 0.5s ease-in-out;
}

.provider_sel:not(.provider_selected) span {
	width: 0;
}

.provider_sel:not(.provider_selected):not(:hover) img {
	filter: grayscale(100%);
}

@media (max-width: 906px) { /*986*/
	.info_description div {
		flex-direction: column;
	}
	.info_description p {
		height: 200px;
	}
	header {
		text-align: right;
	}
}

@media (max-width: 682px) { /*761*/
	.aside_content {
		width: unset;
		padding: 40px 20px;
	}
	.info_description p {
		margin-right: 0;
	}
	aside .img_play_box {
		display: none;
	}
}

@media (max-width: 458px) {
	ol img {
		width: 264px;
	}
	ol p {
		width: 264px;
	}
	.add, .remove, .info {
		background-color: black;
		top: 200px;
		left: 15px;
		width: 50px;
		height: 50px;
	}
	
	.info {
		top: 130px;
	}
	
	.play {
		top: 160px;
		right: 15px;
		width: 80px;
		height: 80px;
		padding-left: 20px;
		padding-top: 12px;
	}
}

/* ####################################################################### */
/* Navbar */
nav {
	padding-right: 15%;
	padding-left: 15%;
	height: 60px;
	position: sticky;
	top: 0;
	z-index: 2;
	background-color: #030303;
	border-bottom: #CCCCCC solid 1px;
	overflow: hidden;
}

/* Button */
.nav_buttons {
	display: flex;
	float: right;
}

.nav_button {
	float: right;
	font-size: 17px;
	padding: 15px 16px;
	display: flex;
	cursor: pointer;
}

.nav_button:hover, .nav_button:focus {
	background-color: #333333;
	outline: none;
	color: #CCCCCC;
	text-decoration: none;
}

.nav_button img {
	height: 30px;
}

.nav_home {
	color: inherit;
	text-decoration: none;
	float: left;
	float: left;
	padding: 17.5px 16px;
	margin-right: 40px;
}

.active_white.nav_active {
	background-color: white;
}
.active_red.nav_active {
	background-color: #e91b24;
}
.active_blue.set_active {
	background-color: #02abeb;
}

.nav_button svg, .nav_button:hover svg {
	height: 30px;
	width: 30px;
	fill: #CCCCCC;
	fill-opacity: 1;
}

.active_white.nav_active svg, .active_red.nav_active svg, .active_blue.set_active svg {
	fill: #333333;
}

/* Navbar Search */
.nav_search input {
	width: 100%;
	box-sizing: border-box;
	border: none;
	border-radius: 4px;
	font-size: 16px;
	background: #333333 url('../nav/search.svg') 10px 7px/27px no-repeat;
	padding: 12px 20px 12px 45px;
	margin: 0;
	color: #CCCCCC;
}

.nav_search input:focus:hover, .nav_search input:focus, .nav_search input:hover {
	outline: none;
	border-radius: 4px;
	background-color: #1C1C1C;
}

/* Search Mobile */
.nav_search {
	justify-content: center;
	display: none;
	width: 500px;
	height: 60px;
	position: fixed;
	background: #030303;
	z-index: 3;
	padding: 0;
	right: 15%;
	top: 0;
	margin-right: 188px;
}
.nav_search_box {
	width: calc(100% - 60px);
	margin-right: 60px;
	margin-top: 9px;
}

.nav_search_button {
	display: block;
	height: 60px;
	width: 60px;
	padding: 0;
	z-index: 4;
	background: transparent url('../nav/search.svg') center/30px no-repeat;
}

.nav_search_button + label::before {
	display: none;
}

#nav_search_button:checked ~ .nav_search {
	display: flex;
}

#nav_search_button:checked ~ .nav_search_button {
	/* position: fixed;
	right: 0;
	top: 0; */
	background: transparent url('../nav/close.svg') center/30px no-repeat;
}

.in_watch_list {
	display: block !important;
}

.hide_search, .not_aviable {
	display: none !important;
}

@media (max-width: 1600px) {
	nav {
		padding-right: 10%;
		padding-left: 10%;
	}
	.nav_search {
		right: 10%;
	}
}

@media (max-width: 1350px) {
	nav {
		padding-right: 10px;
		padding-left: 10px;
	}
	.nav_search {
		right: 10px;
	}
}

